/*
 * CDMlib - Cartesian Data Management library
 *
 * Copyright (c) 2013-2014 Advanced Institute for Computational Science, RIKEN.
 * All rights reserved.
 *
 */


REVISION HISTORY
================

------------------
2014-10-22
Replace Component with NumVariables and edit codes following this replacement
dfiファイルのFileInfoの項目ComponentをNumVariablesに変更した。
また、この変更に伴い、コード内のComponentに関する単語について
Component->NumVariables、nComp->nVari等の置換を行った。
(ただし、BOVのヘッダー部のDATA_COMPONENTはそのままにした。)
また、コード内のコメントで「成分」を含んだ言葉を「変数」で置き換えた。

------------------
2014-10-22
Delete ArrayShape from dfi file and set ArrayShape by file format
dfiファイルのFileInfoの項目からArrayShapeを削除し、
ArrayShapeはファイル形式によって定めるようにした。

------------------
2014-10-21
Restore VectorMinMax only for SPH format
SPH形式のみ、VectorMinMaxを入出力できるように戻した。

------------------
2014-10-21
Delete VectorMinMax and add check of number of variable names
VectorMinMaxをdfiファイルから削除した。
また、フィールドデータの変数の個数と登録された変数名の個数が
一致するか確認するようにした。

------------------
2014-10-20
Set filetype in Plot3d format Fbinary
Plot3d形式のファイル入出力のタイプをFbinaryに設定した。

------------------
2014-10-20
Modify method WriteInit in class cdm_DFI and Read in class cdm_FileInfo
 to return error when arrayshape in plot3d is nijk
Plot3d形式において配列形式がnijkと指定された場合、エラーを返すように
クラスcdm_DFIのWriteInitとクラスcdm_FileInfoのReadを修正した。

------------------
2014-10-18
beta version release

------------------
2014-10-17
Restore SPH format
メンバ関数ReadInitのインスタンス生成部を編集して、sph形式も読込めるように戻した。

------------------
2014-10-01
Change the name of E_CDM_OUTPUT_TYPE to E_CDM_FILE_TYPE
ファイルタイプを示す列挙型E_CDM_OUTPUT_TYPEの名前をE_CDM_FILE_TYPEに変更した。
また、クラスcdm_DFIのメンバ変数にm_input_typeを追加し、この変数を用いて
plot3dで読込むファイルのタイプを指定するようにした。

------------------
2014-10-01
Modify methods in class cdm_DFI_PLOT3D and Edit method ReadInit
クラスcdm_DFI_PLOT3D内のメンバ関数の修正を行った。主に読込み部分で、バグ修正や
コードの整理など。また、読込みに対応するファイル形式をbov,sph->bov,plot3dに
変更するように、メンバ関数ReadInitのインスタンス生成部を編集した。

------------------
2014-09-26